# OpenCV-YOLO-MeterReader

./: .gitignore  CMakeLists.txt  Opencv_hp.cpp  Opencv_hp.h  readme.md  test_dial_mark.md  合格_.csv
.cache/clangd/index/: dialmarkdialog.cpp.7BA384CC9A024593.idx  dialmarkdialog.h.60F372C27A5FBD86.idx  errortabledialog.cpp.BE374D3EFB7A090F.idx  errortabledialog.h.B79CB3BA3041E301.idx  main.cpp.851C41796F87A9EC.idx  mainwindow.cpp.D39470495F022CF5.idx  mainwindow.h.B80AC21724DF5393.idx  settingdialog.cpp.192E1BD9D46FAA49.idx  settingdialog.h.0861527DCC9B1B39.idx  settings.cpp.F9ED04FB0D7029F5.idx  settings.h.72A57BD232642A2E.idx
.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake
docs/: record(11.19-11,29).md  record.md
inc/analysis/: Opencv_hp.h
inc/gui/include/: MainWindow.h
inc/gui/src/: MainWindow.cpp
ref/: grab_images.cpp  main.cpp  shashidi.cpp  shashidi.h
src/: Demo_BaslerCamera_Qt.pro  byq.csv  dialmarkdialog.cpp  dialmarkdialog.h  errortabledialog.cpp  errortabledialog.h  grab_images2.cpp  grab_images2.h  helpdialog.cpp  helpdialog.h  images.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingdialog.cpp  settingdialog.h  settingdialog.ui  settings.h  ui_mainwindow.h  yyqy.csv  格式.csv
src/analysis/: Opencv_hp.cpp  grab_images.cpp  test_opencv_hp.cpp
src/gui/: CMakeLists.txt
src/gui/resources/: resources.qrc
src/gui/src/: MainWindow.cpp
testB/: CMakeLists.txt  test.cpp  test_generated_dial.tiff
testYYQY/: CMakeLists.txt
